--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 <html>
-<head>title page 1</head>
-<body>vishwa</body>
+
+</html><!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+</head>
+<body>
+
+</body>
 </html>
