--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <html>
-
-</html><!DOCTYPE html>
-<html>
 <head>
-	<title></title>
+	
 </head>
 <body>
-
+<h1>hi i am test vikas</h1>
 </body>
 </html>
